--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 
 <head>
-  <title>Movie API</title>
+  <title>Movies API</title>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <!-- <link rel="shortcut icon" href="./src/assets/img/AC.png" type="image/x-icon" /> -->
+  <link rel="shortcut icon" href="./src/assets/img/logo.png" type="image/x-icon">
 
   <!--Fontes:-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
